--- a/dashboard/templates/dashboard/products/productAdd.html
+++ b/dashboard/templates/dashboard/products/productAdd.html
@@ -17,6 +17,23 @@
             position: absolute;
             visibility: hidden;
         }
+
+        #barcode_box{
+            width: 100%;
+            height: 300px;
+        }
+        #barcode_box > video,
+        #barcode_box > canvas{
+            max-width: 100%;
+            width: 100%;
+            height: 100%;
+        }
+        #barcode_box > video{
+            object-fit: contain;
+        }
+        #barcode_box > canvas{
+            display: none;
+        }
     </style>
 {% endblock %}
 
@@ -62,7 +79,12 @@
                                             {{ productForm.name }}
                                         </div>
                                         <div class="form-group">
-                                            <label for="id_code">Product Code</label>
+                                            <label for="id_code">
+                                                Product Code
+                                                <a href="javascript:void(0)" data-toggle="modal" data-target="#productBarcodeContainer" class="ml-3">
+                                                    <i class="fas fa-barcode"></i> scan barcode
+                                                </a>
+                                            </label>
                                             {{ productForm.code }}
                                         </div>
                                         <div class="form-group">
@@ -88,10 +110,38 @@
         </div>
     </div>
 
+    <!-- Webcam Modal -->
+    <div class="modal fade" id="productBarcodeContainer" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <i class="modal-title text-success font-italic" id="exampleModalLongTitle">Scanning in progress...</i>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row justify-content-center">
+                        <div class="col-8">
+                            <div id="barcode_box"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    {#                    <button id="snap_barcode" type="button" class="btn btn-primary">#}
+                    {#                        <i class="fas fa-camera"></i> Take Snapshot#}
+                    {#                    </button>#}
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 
 {% block script %}
+    <script src="{% static 'dashboard/assets/custom-js/quagga.min.js' %}"></script>
     <script>
         $('#id_image').on('change', function(event){
             const file = event.target.files[0];
@@ -101,5 +151,46 @@
             };
             reader.readAsDataURL(file)
         })
+    </script>
+    <script>
+        const barcodeModal = $('#productBarcodeContainer');
+        const take_snap_btn = $('#snap_barcode');
+
+        Quagga.onDetected((codeResult)=>{
+            console.log(codeResult);
+            if(codeResult.code){
+                $('#id_code').val(codeResult.code);
+            }
+            Quagga.stop();
+            barcodeModal.modal('hide');
+        });
+        barcodeModal.on('shown.bs.modal', ()=>{
+            Quagga.init({
+                inputStream : {
+                    name : "Live",
+                    type : "LiveStream",
+                    target: document.querySelector('#barcode_box')    // Or '#yourElement' (optional)
+                },
+                decoder : {
+                    readers : ["code_128_reader"],
+                    debug: {
+                        drawBoundingBox: true,
+                        showFrequency: false,
+                        drawScanline: true,
+                        showPattern: true
+                    }
+                }
+            }, function(err) {
+                if (err) {
+                    console.log(err);
+                    return
+                }
+                console.log("Scanner initialization finished. Ready to start");
+            })
+        });
+        barcodeModal.on('hide.bs.modal', ()=>{
+            Quagga.stop();
+        });
+
     </script>
 {% endblock %}
