--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="col-6 d-flex justify-content-center">
                                 <a href="javascript:void(0)" class="logo">
-                                    <img class="img-fluid" src="{% static 'home/images/logo/logo2.png' %}" alt="logo here">
+                                    <img class="img-fluid" src="{% static 'home/images/logo/mts_logo.png' %}" alt="logo here">
                                 </a>
                             </div>
                         </div>
@@ -1028,7 +1028,7 @@
                     </div>
                     <div class="col-6 d-flex justify-content-center">
                         <a href="{% url 'home' %}" class="logo">
-                            <img class="img-fluid" src="{% static 'home/images/logo/logo2.png' %}" alt="mts logo">
+                            <img class="img-fluid" src="{% static 'home/images/logo/mts_logo.png' %}" alt="mts logo">
                         </a>
                     </div>
                 </div>
