--- a/dashboard/templates/dashboard/products/productAdd.html
+++ b/dashboard/templates/dashboard/products/productAdd.html
@@ -175,9 +175,7 @@
                 },
                 decoder : {
                     readers : [
-                        "code_128_reader", "ean_reader", "ean_8_reader",
-                        "code_39_reader", "code_39_vin_reader", "codabar_reader",
-                        "upc_reader", "upc_e_reader", "i2of5_reader",
+                        "code_128_reader", "codabar_reader",
                         "2of5_reader", "code_93_reader"
                     ],
                     debug: {
