--- a/dashboard/templates/dashboard/products/productAdd.html
+++ b/dashboard/templates/dashboard/products/productAdd.html
@@ -156,15 +156,20 @@
         const barcodeModal = $('#productBarcodeContainer');
         const take_snap_btn = $('#snap_barcode');
 
+        let last_result = [];
         Quagga.onDetected((result)=>{
-            console.log(result);
-            if(result.codeResult){
-                $('#id_code').val('#'+result.codeResult.code);
+            let last_code = result.codeResult.code;
+            last_result.push(last_code);
+            if(last_result.length > 20){
+                let code = order_by_occurence(last_result)[0];
+                last_result = [];
+                {#console.log(result);#}
+                $('#id_code').val('#'+code);
                 Quagga.stop();
                 barcodeModal.modal('hide');
             }
-        });
 
+        });
 
         barcodeModal.on('shown.bs.modal', ()=>{
             Quagga.init({
@@ -174,15 +179,12 @@
                     target: document.querySelector('#barcode_box'),    // Or '#yourElement' (optional)
                     numOfWorkers: navigator.hardwareConcurrency
                 },
-                // "upc_reader", "upc_e_reader",
-                {#"code_128_reader", "ean_reader", "ean_8_reader",#}
-                {#        "code_39_reader", "code_39_vin_reader", "codabar_reader",#}
-                {#        "i2of5_reader",#}
-                {#        "2of5_reader", "code_93_reader"#}
                 decoder : {
                     readers : [
                         "code_128_reader", "ean_reader", "ean_8_reader",
-                        "upc_reader", "upc_e_reader",
+                        "code_39_reader", "code_39_vin_reader", "codabar_reader",
+                        "upc_reader", "upc_e_reader", "i2of5_reader",
+                        "2of5_reader", "code_93_reader"
                     ]
                 }
             }, function(err) {
@@ -198,6 +200,19 @@
         barcodeModal.on('hide.bs.modal', ()=>{
             Quagga.stop();
         });
+
+        function order_by_occurence(arr){
+            let counts = {};
+            arr.forEach(value=>{
+                if(!counts[value]){
+                    counts[value] = 0
+                }
+                counts[value]++
+            });
+            return Object.keys(counts).sort((currKey, nextKey)=>{
+                return counts[currKey] < counts[nextKey]
+            })
+        }
 
     </script>
 {% endblock %}
