--- a/dashboard/templates/dashboard/products/productAdd.html
+++ b/dashboard/templates/dashboard/products/productAdd.html
@@ -158,10 +158,11 @@
 
         let last_result = [];
         Quagga.onDetected((result)=>{
+            {#console.log(result)#}
             let last_code = result.codeResult.code;
             last_result.push(last_code);
-            if(last_result.length > 20){
-                let code = order_by_occurence(last_result)[0];
+            if(last_result.length > 10){
+                let code = order_by_occurrence(last_result)[0];
                 last_result = [];
                 {#console.log(result);#}
                 $('#id_code').val('#'+code);
@@ -182,9 +183,7 @@
                 decoder : {
                     readers : [
                         "code_128_reader", "ean_reader", "ean_8_reader",
-                        "code_39_reader", "code_39_vin_reader", "codabar_reader",
-                        "upc_reader", "upc_e_reader", "i2of5_reader",
-                        "2of5_reader", "code_93_reader"
+                        "upc_reader", "upc_e_reader",
                     ]
                 }
             }, function(err) {
@@ -196,18 +195,22 @@
                 Quagga.start();
             });
         });
-
+{#"code_128_reader", "ean_reader", "ean_8_reader",#}
+{#                        "code_39_reader", "code_39_vin_reader", "codabar_reader",#}
+{#                        "upc_reader", "upc_e_reader", "i2of5_reader",#}
+{#                        "2of5_reader", "code_93_reader"#}
         barcodeModal.on('hide.bs.modal', ()=>{
             Quagga.stop();
         });
 
-        function order_by_occurence(arr){
+        function order_by_occurrence(arr){
             let counts = {};
             arr.forEach(value=>{
                 if(!counts[value]){
                     counts[value] = 0
+                }else{
+                    counts[value]++
                 }
-                counts[value]++
             });
             return Object.keys(counts).sort((currKey, nextKey)=>{
                 return counts[currKey] < counts[nextKey]
